fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -130,6 +130,7 @@
     }
 
     .hero__desc {
+        width: 100%;
         font-size: 1.6rem;
         line-height: 1.62;
         margin-bottom: 30px;
@@ -615,5 +616,37 @@
         bottom: 50px;
         background-color: #0c0720;
         height: 1px;
+    }
+}
+
+@media (max-width: 320px) {
+    .client-list {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .client .col-sm-12 {
+        width: 100%;
+    }
+
+    .specialities__item {
+        padding: 0 20px;
+    }
+
+    .questions__title {
+        font-size: 2rem;
+    }
+
+    .questions__title {
+        width: 200px;
+    }
+
+    .atmosphere__top {
+        padding: 0 20px;
+    }
+
+    .footer__bottom-right p,
+    .footer__coppyright {
+        font-size: 1.4rem;
     }
 }
